finished comments for swagger, moved path to /docs/index.html
