# api/controllers/posts_controller.go
@@ -23,6 +23,7 @@ import (
 // @Router /post [post]
 // @Security ApiKeyAuth
 // @param Authorization header string true "Format: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRob3JpemVkIjp0cnVlLCJleHAiOjE2MDQ1MzExMDIsInVzZXJfaWQiOjF9.O63ZS_Poy29dDdcZqHDN0XeMPbYPX-Vfyl_FPfsMTvQ'"
+// @tags posts
 func (server *Server) CreatePost(w http.ResponseWriter, r *http.Request) {
 
 	body, err := ioutil.ReadAll(r.Body)
@@ -67,6 +68,7 @@ func (server *Server) CreatePost(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {array} models.Post
 // @Produces string
 // @Router /post [get]
+// @tags posts
 func (server *Server) GetPosts(w http.ResponseWriter, r *http.Request) {
 
 	post := models.Post{}
@@ -78,7 +80,15 @@ func (server *Server) GetPosts(w http.ResponseWriter, r *http.Request) {
 	}
 	responses.JSON(w, http.StatusOK, posts)
 }
-
+// GetPost godoc
+// @Summary list post by id
+// @Description list post by id
+// @Accept  json
+// @Success 200 {object} models.Post
+// @Param id path int true "Post ID"
+// @Produces string
+// @Router /post/{id} [get]
+// @tags posts
 func (server *Server) GetPost(w http.ResponseWriter, r *http.Request) {
 
 	vars := mux.Vars(r)
@@ -96,7 +106,17 @@ func (server *Server) GetPost(w http.ResponseWriter, r *http.Request) {
 	}
 	responses.JSON(w, http.StatusOK, postReceived)
 }
-
+// UpdatePost godoc
+// @Summary Updates a post
+// @Description Updates a post
+// @Accept json
+// @Param body body models.Post true "Json body containing post data"
+// @Success 200 {object} models.Post
+// @Router /post/{id} [put]
+// @Security ApiKeyAuth
+// @param Authorization header string true "Format: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRob3JpemVkIjp0cnVlLCJleHAiOjE2MDQ1MzExMDIsInVzZXJfaWQiOjF9.O63ZS_Poy29dDdcZqHDN0XeMPbYPX-Vfyl_FPfsMTvQ'"
+// @Param id path int true "Post ID"
+// @tags posts
 func (server *Server) UpdatePost(w http.ResponseWriter, r *http.Request) {
 
 	vars := mux.Vars(r)
@@ -140,7 +160,16 @@ func (server *Server) UpdatePost(w http.ResponseWriter, r *http.Request) {
 	}
 	responses.JSON(w, http.StatusOK, postUpdated)
 }
-
+// DeletePost godoc
+// @Summary Deletes a post
+// @Description Deletes a post
+// @Accept json
+// @Success 200 {string} string	"Entity Count"
+// @Router /post/{id} [delete]
+// @Param id path int true "Post ID"
+// @Security ApiKeyAuth
+// @param Authorization header string true "Format: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRob3JpemVkIjp0cnVlLCJleHAiOjE2MDQ1MzExMDIsInVzZXJfaWQiOjF9.O63ZS_Poy29dDdcZqHDN0XeMPbYPX-Vfyl_FPfsMTvQ'"
+// @tags posts
 func (server *Server) DeletePost(w http.ResponseWriter, r *http.Request) {
 
 	vars := mux.Vars(r)
